Feat: Card.test.js and Card.jsx propTypes mods

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,5 +15,5 @@
   "rules": {
     "linebreak-style": 0
   },
-  "ignorePatterns": ["src/redux"]
+  "ignorePatterns": ["src/redux", "*.test.js"]
 }
