--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
     "ecmaFeatures": {
       "jsx": true
     },
-    // "project": "./tsconfig.json",
+    "project": "./tsconfig.json",
     "ecmaVersion": 13,
     "sourceType": "module"
   },
@@ -21,5 +21,9 @@
   "rules": {
     "linebreak-style": 0
   },
-  "ignorePatterns": ["src/redux", "*.test.js"]
+  "ignorePatterns": ["src/redux", "*.test.js"],
+  "react/function-component-definition": [
+    2,
+    { "namedComponents": "arrow-function" }
+  ]
 }
