--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,11 +19,11 @@
   },
   "plugins": ["react"],
   "rules": {
-    "linebreak-style": 0
+    "linebreak-style": 0,
+    "react/function-component-definition": [
+      2,
+      { "namedComponents": "arrow-function" }
+    ]
   },
-  "ignorePatterns": ["src/redux", "*.test.js"],
-  "react/function-component-definition": [
-    2,
-    { "namedComponents": "arrow-function" }
-  ]
+  "ignorePatterns": ["src/redux", "*.test.js"]
 }
