--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,7 @@
     "linebreak-style": 0,
     "react/function-component-definition": [
       2,
-      { "namedComponents": "arrow-function" }
+      { "namedComponents": ["arrow-function", "function-declaration"] }
     ]
   },
   "ignorePatterns": ["src/redux", "*.test.js"]
